# ros2-waypoints

./: README.md
project_rom/: CMakeLists.txt  package.xml
project_rom/config/: path.yaml
project_rom/include/project_rom/: WayPointPathTools.hpp
project_rom/launch/: rviz2_launch.py  scene_launch.py
project_rom/msg/: WayPointPath.msg
project_rom/rviz/: tb3_coppeliasim_sonar.rviz
project_rom/src/: obstacle_avoider_node.cpp  pure_pursuit_odom.cpp  waypoints_node.cpp
project_rom/src/waypoint_tools/: WayPointPathTools.cpp
project_rom/urdf/: turtlebot3_burger.urdf
